--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,28 @@
 
 # Server port
-server.port=9080
+server.port=8080
 
 # Servlet context path
 server.servlet.context-path=/helloworld
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bookie_db
 spring.datasource.url=jdbc:postgresql://localhost:5432/democicd
+#spring.datasource.url=jdbc:postgresql://mydemo1.cyzt7kdm3mqu.us-east-1.rds.amazonaws.com:5432/democicd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+## Spring DATASOURCE MySQL
+#spring.datasource.url=jdbc:mysql://localhost:3306/democicd
+#spring.datasource.username=root
+#spring.datasource.password=rootrootroot
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
